<resources>
    <string name="app_name">UAS 180030552 1</string>

    <string name="tambah">Tambah Buku</string>
    <string name="edit">Edit Buku</string>
    <string name="hapus">Hapus Buku</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Simpan</string>
    <string name="id_buku">ID Buku</string>
    <string name="judul_buku">Judul</string>

    <string name="data_buku">Data Buku</string>
    <string name="penulis">Penulis</string>
    <string name="penerbit">Penerbit</string>
    <string name="genre">Genre</string>
    <string name="tahun">Tahun</string>
    <string name="gambar">Gambar</string>
    <string name="sinopsis">Sinopsis</string>

</resources>
